@@ -9,6 +9,7 @@ public:
 	CWunderground(const int ID, const std::string APIKey, const std::string Location);
 	~CWunderground(void);
 	void WriteToHardware(const char *pdata, const unsigned char length);
+	std::string GetForecastURL();
 private:
 	std::string m_APIKey;
 	std::string m_Location;
